--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -1,3 +1,23 @@
 .authBtn {
-    margin-right: 2rem;
+    position: relative;
+    border: 3px solid black;
+    border-radius: 7px;
+    width: 100px;
+    text-align: center;
+
 }
+
+.provPics::before {
+    content: "";
+    position: absolute;
+    left: -15px;
+    top: 12px;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    background-image: var(--url);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 60px;
+  }
